# blog-api-rust-v1

./: .gitignore  Cargo.toml  Makefile  notes.txt
entity/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250326_020445_create_user_table.rs  m20250427_200238_add_created_at__to_post.rs
src/: main.rs
src/routes/: auth_routes.rs  home_routes.rs  post_routes.rs  user_routes.rs
src/routes/handlers/: auth_handler.rs  home_handler.rs  post_handler.rs  user_handler.rs
src/routes/middlewares/: auth_middleware.rs
src/utils/: api_response.rs  app_state.rs  constants.rs  jwt.rs
