[package]
name = "diary-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
actix-web = "4.10.2"
dotenv = "0.15.0"
env_logger = "0.11.7"
serde = "1.0.219"
serde_json = "1.0.140"
lazy_static = "1.5.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sha256 = "1.6.0" # For hashing
jsonwebtoken = "9.3.1" # For tokenization
chrono = "0.4.40" # for date and time
actix-web-lab = "0.24.1" # helps us create simple middleware
once_cell = "1.21.3"
watchexec = "6.0.0" # to watch changes on code like nodemon for node

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
